// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HvCheckBox sample snapshot testing ErrorMessage 1`] = `
<div>
  <div
    class="HvCheckBox-root-43 HvFormElement-root-51"
  >
    <div
      class="HvCheckBox-container-44 HvCheckBox-invalidContainer-45"
    >
      <span
        class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-47 HvCheckBox-invalidCheckbox-48 HvBaseCheckbox-root-52 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          aria-errormessage="hvcheckbox7-error"
          aria-invalid="true"
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          id="hvcheckbox7-input"
          type="checkbox"
          value="on"
        />
        <div
          class="HvIconBase-root-55 HvIconBase-s-57"
          font-size="medium"
          name="Checkbox"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M0 0h16v16H0z"
              fill="#FBFCFC"
            />
            <path
              class="color1"
              d="M16 16H0V0h16zM1 15h14V1H1z"
              fill="#414141"
            />
          </svg>
        </div>
      </span>
      <label
        class="HvCheckBox-label-49 HvLabel-root-60 HvTypography-root-63 HvTypography-highlightText-75"
        for="hvcheckbox7-input"
        id="hvcheckbox7-label"
      >
        Checkbox 1
      </label>
    </div>
    <div
      class="HvWarningText-root-85 HvWarningText-show-90"
    >
      <div
        class="HvWarningText-defaultIcon-89 HvIconBase-root-55 HvIconBase-s-57"
        name="Fail"
      >
        <svg
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M7.5 4.001h1v6h-1zm0 8h1v-1h-1zM16 8a8 8 0 10-8 8 8 8 0 008-8zm-1 0a7 7 0 11-7-7 7 7 0 017 7z"
            fill="#C62828"
          />
        </svg>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        aria-relevant="additions text"
        class="HvWarningText-warningText-88 HvWarningText-topGutter-87 HvTypography-root-63 HvTypography-normalText-76"
        id="hvcheckbox7-error"
      >
        No way for this to be valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`HvCheckBox sample snapshot testing Main 1`] = `
<div>
  <div
    class="HvCheckBox-root-1 HvFormElement-root-9"
  >
    <div
      class="HvCheckBox-container-2"
    >
      <span
        class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-5 HvBaseCheckbox-root-10 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          id="hvcheckbox1-input"
          type="checkbox"
          value="on"
        />
        <div
          class="HvIconBase-root-13 HvIconBase-s-15"
          font-size="medium"
          name="Checkbox"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M0 0h16v16H0z"
              fill="#FBFCFC"
            />
            <path
              class="color1"
              d="M16 16H0V0h16zM1 15h14V1H1z"
              fill="#414141"
            />
          </svg>
        </div>
      </span>
      <label
        class="HvCheckBox-label-7 HvLabel-root-18 HvTypography-root-21 HvTypography-highlightText-33"
        for="hvcheckbox1-input"
        id="hvcheckbox1-label"
      >
        Checkbox 1
      </label>
    </div>
  </div>
  <div
    class="HvCheckBox-root-1 HvFormElement-root-9"
  >
    <div
      class="HvCheckBox-container-2"
    >
      <span
        class="MuiCheckbox-root MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorDefault PrivateSwitchBase-root Mui-checked HvCheckBox-checkbox-5 HvBaseCheckbox-root-10 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          checked=""
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          id="hvcheckbox3-input"
          type="checkbox"
          value="on"
        />
        <div
          class="HvIconBase-root-13 HvIconBase-s-15"
          font-size="medium"
          name="CheckboxCheck"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M0 0h16v16H0z"
              fill="#414141"
            />
            <path
              class="color0"
              d="M16 16H0V0h16zM1 15h14V1H1z"
              fill="#414141"
            />
            <path
              class="color1"
              d="M6.049 12.463L2.293 8.707l1.414-1.414 2.244 2.244 6.3-7.2 1.506 1.317z"
              fill="#FBFCFC"
            />
          </svg>
        </div>
      </span>
      <label
        class="HvCheckBox-label-7 HvLabel-root-18 HvTypography-root-21 HvTypography-highlightText-33"
        for="hvcheckbox3-input"
        id="hvcheckbox3-label"
      >
        Checkbox 2
      </label>
    </div>
  </div>
  <div
    class="HvCheckBox-root-1 HvFormElement-root-9"
  >
    <div
      class="HvCheckBox-container-2"
    >
      <span
        class="MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorDefault MuiButtonBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorDefault PrivateSwitchBase-root HvCheckBox-checkbox-5 HvBaseCheckbox-root-10 css-balhlm-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="true"
          id="hvcheckbox5-input"
          type="checkbox"
          value="on"
        />
        <div
          class="HvIconBase-root-13 HvIconBase-s-15"
          font-size="medium"
          name="CheckboxPartial"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M0 0h16v16H0z"
              fill="#FBFCFC"
            />
            <path
              class="color1"
              d="M16 16H0V0h16zM1 15h14V1H1zm3-6h8V7H4z"
              fill="#414141"
            />
          </svg>
        </div>
      </span>
      <label
        class="HvCheckBox-label-7 HvLabel-root-18 HvTypography-root-21 HvTypography-highlightText-33"
        for="hvcheckbox5-input"
        id="hvcheckbox5-label"
      >
        Checkbox 3
      </label>
    </div>
  </div>
</div>
`;
